--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "newmagichread",
+  "name": "magichread",
   "version": "0.1.0",
+  "hostpage": "https://www.magicthreadcork.com",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
